welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: identifier expected but integer literal found.
  var C:Int==0
             ^